math-core/tests/snapshots/wiki_test__wiki177.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\mathrm{ABCDEFGHI} \\\\ \\mathrm{JKLMNOPQR} \\\\ \\mathrm{STUVWXYZ} \\\\ \\mathrm{abcdefghijklm} \\\\ \\mathrm{nopqrstuvwxyz} \\\\ \\mathrm{0123456789}"
---
<math>
    <mpadded><mi>ABCDEFGHI</mi></mpadded>
    <mpadded><mi>JKLMNOPQR</mi></mpadded>
    <mpadded><mi>STUVWXYZ</mi></mpadded>
    <mpadded><mi>abcdefghijklm</mi></mpadded>
    <mpadded><mi>nopqrstuvwxyz</mi></mpadded>
    <mn>0123456789</mn>
</math>
