math-core/tests/snapshots/wiki_test__wiki179.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\mathsf{\\Alpha \\Beta \\Gamma \\Delta \\Epsilon \\Zeta \\Eta \\Theta}"
---
<math>
    <mi>ΑΒΓΔΕΖΗΘ</mi>
</math>
