math-core/tests/snapshots/wiki_test__wiki180.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\mathsf{\\Iota \\Kappa \\Lambda \\Mu \\Nu \\Xi \\Omicron \\Pi}"
---
<math>
    <mi>ΙΚΛΜΝΞΟΠ</mi>
</math>
