math-core/tests/snapshots/wiki_test__wiki184.snap
---
source: math-core/tests/wiki_test.rs
expression: "{\\scriptstyle\\text{abcdefghijklm}}"
---
<math>
    <mrow displaystyle="false" scriptlevel="1">
        <mtext>abcdefghijklm</mtext>
    </mrow>
</math>
