math-core/tests/snapshots/wiki_test__wiki186.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\text{x y z}"
---
<math>
    <mtext>x y z</mtext>
</math>
